working on layout

--- a/flexbox.css
+++ b/flexbox.css
@@ -63,6 +63,7 @@ main
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
+    flex: 1 1 630px;
 }
 
 .half-container
@@ -154,6 +155,10 @@ main
 .svg-icon circle
 {
     fill:aliceblue;
+}
+#donutchart
+{
+    width: 100%;
 }
 footer
 {
